--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,9 +1,10 @@
 ---
 layout: default
 ---
-<h1>{{ page.title }}</h1>
-<p class="meta">{{ page.date | date_to_string }}</p>
-
-<div class="post">
-  {{ content }}
+<div class="post-header">
+  <h1>{{ page.title }}</h1>
+  <p class="meta"><em>{{ page.date | date_to_string }}</em></p>
 </div>
+<article>
+  {{ content }}
+</article>
