Better link styling.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,8 @@
   <head>
     <title>{{ page.title }}</title>
     <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Open+Sans">
   </head>
   <body>
     <!-- content -->
