Better header styling.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,13 +18,7 @@
               <a href="#">Home</a>
             </li>
             <li>
-              <a href="#">Data Formats</a>
-            </li>
-            <li>
-              <a href="#">Databases</a>
-            </li>
-            <li>
-              <a href="#">Unix</a>
+              <a href="#">About</a>
             </li>
           </ul>
         </nav>
