--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- content -->
