--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -1,10 +1,24 @@
+$main-max-width: 580px;
+$body-padding: 20px;
+$header-width: 180px;
+$header-padding: 24px;
+$header-offset: 48px;
+
+$main-extent: $main-max-width + 2 * $body-padding;
+$main-with-header-extent:
+    $main-extent + 2 * ($header-width + $header-offset);
+
+* {
+    box-sizing: border-box;
+}
+
 html, body {
     margin: 0;
     padding: 0;
 }
 
 body {
-    padding: 20px 0;
+    padding: $body-padding;
 }
 
 h1, h2, h3 {
@@ -17,13 +31,12 @@ h1 + p, h2 + p, h3 + p {
 
 main {
     margin: auto;
-    max-width: 580px;
+    max-width: $main-max-width;
     position: relative;
 }
 
 header {
     text-align: right;
-    white-space: nowrap;
 
     h1 {
         line-height: 1;
@@ -34,13 +47,22 @@ header {
         padding: 0;
     }
 
-    padding-right: 24px;
+    padding-right: $header-padding;
 
     position: absolute;
-    right: calc(100% + 48px);
+    right: calc(100% + #{$header-offset});
     top: 40px;
+    width: $header-width;
+
+    @media (max-width: $main-with-header-extent) {
+        display: none;
+    }
 }
 
 .post-header {
     margin: 2.0em 0;
+
+    @media (max-width: $main-extent) {
+        margin-top: 0;
+    }
 }
