--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,10 +16,10 @@
         <nav>
           <ul>
             <li>
-              <a href="#">Home</a>
+              <a href="{{site.baseurl}}{% link index.html %}">Home</a>
             </li>
             <li>
-              <a href="#">About</a>
+              <a href="{{site.baseurl}}{% link about.html %}">About</a>
             </li>
           </ul>
         </nav>
