--- a/css/main.scss
+++ b/css/main.scss
@@ -63,6 +63,15 @@ ul.index li {
     &:last-child {
         border-bottom: none;
     }
+
+    h1 a {
+        text-decoration: none;
+        color: inherit;
+
+        &:hover {
+            text-decoration: underline;
+        }
+    }
 }
 
 .footnotes {
