Footer, Favicon, and home link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,13 +5,17 @@
     <link rel="stylesheet" type="text/css" href="/css/main.css">
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css?family=Open+Sans">
+    <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
     <!-- content -->
     <main>
       <header>
-        <h1><code>0b10</code></h1>
+        <h1><a href="{{site.baseurl}}{% link index.html %}">
+            <code>0b10</code>
+        </a></h1>
         <p>Two-Bit History</p>
         <nav>
           <ul>
@@ -30,6 +34,9 @@
 
     <!-- footer -->
     <footer>
+      <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">
+        <img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" />
+      </a>
     </footer>
   </body>
 </html>
