--- a/css/main.scss
+++ b/css/main.scss
@@ -53,7 +53,7 @@ header {
     border-right: 1px solid black;
 }
 
-header ul, ul.index {
+header ul, .mobile-header ul, ul.index {
     list-style: none;
 }
 
@@ -80,4 +80,27 @@ h1 a {
 
 .nobr {
     white-space: nowrap;
+}
+
+.mobile-header {
+    border-bottom: 1px dashed $index-border-color;
+}
+
+.arrow-down, .arrow-up {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent;
+    border-right: 10px solid transparent;
+}
+
+.arrow-down {
+    border-top: 10px solid darkgray;
+}
+
+.arrow-up {
+    border-bottom: 10px solid black;
+}
+
+.closed {
+    display: none;
 }
