Add google analytics tracking script.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,6 +13,16 @@
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
     <script src="{{ site.baseurl }}{% link scripts/dropdown.js %}"></script>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108132752-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108132752-1');
+    </script>
   </head>
   <body>
     <!-- content -->
