--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@ html, body {
 }
 
 body {
-    font-family: 'AdobeGaramondRegular', serif;
+    font-family: 'AdobeGaramond', serif;
     font-size: 1.8rem;
     line-height: 1.5;
 }
@@ -26,10 +26,6 @@ pre {
 
 h1 {
     font-size: 4.2rem;
-}
-
-em {
-    font-family: 'AdobeGaramondItalic', serif;
 }
 
 a {
