Tagline and sans-serif font change.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,6 +52,10 @@
             <code>0b10</code>
         </a></h1>
         <p>Two-Bit History</p>
+        <p class="tagline">
+          More than you could possibly care to know about software <br />nobody
+          still uses&trade;
+        </p>
         <nav>
           <ul>
             <li>
