Code styling fixes.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <div class="dropdown-toggle">
         <div class="arrow-down">
         </div>
-        <h1><code>0b10</code></h1>
+        <h1 class="code-title">0b10</h1>
       </div>
       <div class="dropdown closed">
         <p>Two-Bit History</p>
@@ -48,8 +48,8 @@
     </div>
     <main>
       <header>
-        <h1><a href="{{site.baseurl}}{% link index.html %}">
-            <code>0b10</code>
+        <h1 class="code-title"><a href="{{site.baseurl}}{% link index.html %}">
+            0b10
         </a></h1>
         <p>Two-Bit History</p>
         <p class="tagline">
