--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,8 +53,7 @@
         </a></h1>
         <p>Two-Bit History</p>
         <p class="tagline">
-          More than you could possibly care to know about software <br />nobody
-          still uses&trade;
+          Computer history for software people
         </p>
         <nav>
           <ul>
