Change tagline to 'computing through the ages.'

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         </a></h1>
         <p>Two-Bit History</p>
         <p class="tagline">
-          Computer history for computer people
+          Computing through the ages
         </p>
         <nav>
           <ul>
