Add break to tagline to prevent orphaning.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -54,7 +54,7 @@
         </a></h1>
         <p>Two-Bit History</p>
         <p class="tagline">
-          Computing through the ages
+          Computing through<br/>the ages
         </p>
         <nav>
           <ul>
