Center images properly.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -80,6 +80,8 @@ header ul, .mobile-header ul, ul.index {
 
 article img {
     max-width: 100%;
+    margin: auto;
+    display: block;
 }
 
 ul.index {
