--- a/css/main.scss
+++ b/css/main.scss
@@ -93,13 +93,15 @@ h1 a {
     text-overflow: ellipsis;
     overflow: hidden;
     max-width: 100%;
+    font-size: 1.6rem;
+    margin-top: 26px;
+    padding: 10px 0;
+    border-top: 1px dashed $index-border-color;
+    overflow-wrap: break-word;
 
     a {
-        word-break: break-all;
-    }
-
-    :not(a) {
-        overflow-wrap: break-word;
+        overflow-wrap: normal;
+        word-break: break-all; // Doesn't work on inline elements in Firefox :(
     }
 }
 
