Add timeline link to sidebar.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,9 @@
             <li>
               <a href="{{site.baseurl}}{% link about.html %}">About</a>
             </li>
+            <li>
+              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
+            </li>
           </ul>
         </nav>
       </div>
@@ -63,6 +66,9 @@
             </li>
             <li>
               <a href="{{site.baseurl}}{% link about.html %}">About</a>
+            </li>
+            <li>
+              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
             </li>
           </ul>
         </nav>
