Dropdown arrow should toggle dropdown too.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
     <!-- content -->
     <div class="mobile-header">
       <div class="dropdown-toggle">
-        <div class="arrow-down">
+        <div class="arrow-down dropdown-toggle">
         </div>
         <h1 class="code-title">0b10</h1>
       </div>
