Add twitter icon link.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,13 @@
             </li>
           </ul>
         </nav>
+        <ul>
+          <li>
+            <a href="https://twitter.com/TwoBitHistory">
+              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
+            </a>
+          </li>
+        </ul>
       </div>
     </div>
     <main>
@@ -72,6 +79,13 @@
             </li>
           </ul>
         </nav>
+        <ul>
+          <li>
+            <a href="https://twitter.com/TwoBitHistory">
+              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
+            </a>
+          </li>
+        </ul>
       </header>
 
       {{ content }}
