Switch from baseurl to url.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,7 +12,7 @@
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"
             integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
             crossorigin="anonymous"></script>
-    <script src="{{ site.baseurl }}{% link scripts/dropdown.js %}"></script>
+    <script src="{{ site.url }}{% link scripts/dropdown.js %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.0/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -38,20 +38,20 @@
         <nav>
           <ul>
             <li>
-              <a href="{{site.baseurl}}{% link index.html %}">Home</a>
+              <a href="{{site.url}}{% link index.html %}">Home</a>
             </li>
             <li>
-              <a href="{{site.baseurl}}{% link about.html %}">About</a>
+              <a href="{{site.url}}{% link about.html %}">About</a>
             </li>
             <li>
-              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
+              <a href="{{site.url}}{% link timeline.html %}">Timeline</a>
             </li>
           </ul>
         </nav>
         <ul>
           <li>
             <a href="https://twitter.com/TwoBitHistory">
-              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
+              <img class="icon" src="{{site.url}}{% link images/twitter.svg %}" />
             </a>
           </li>
         </ul>
@@ -59,7 +59,7 @@
     </div>
     <main>
       <header>
-        <h1 class="code-title"><a href="{{site.baseurl}}{% link index.html %}">
+        <h1 class="code-title"><a href="{{site.url}}{% link index.html %}">
             0b10
         </a></h1>
         <p>Two-Bit History</p>
@@ -69,20 +69,20 @@
         <nav>
           <ul>
             <li>
-              <a href="{{site.baseurl}}{% link index.html %}">Home</a>
+              <a href="{{site.url}}{% link index.html %}">Home</a>
             </li>
             <li>
-              <a href="{{site.baseurl}}{% link about.html %}">About</a>
+              <a href="{{site.url}}{% link about.html %}">About</a>
             </li>
             <li>
-              <a href="{{site.baseurl}}{% link timeline.html %}">Timeline</a>
+              <a href="{{site.url}}{% link timeline.html %}">Timeline</a>
             </li>
           </ul>
         </nav>
         <ul>
           <li>
             <a href="https://twitter.com/TwoBitHistory">
-              <img class="icon" src="{{site.baseurl}}{% link images/twitter.svg %}" />
+              <img class="icon" src="{{site.url}}{% link images/twitter.svg %}" />
             </a>
           </li>
         </ul>
