Up font size a tad. Visited links styled properly.

--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,4 +1,5 @@
 $pre-background-color: #fdfdfd;
 $pre-border-color: lightgray;
 $link-color: #326891; // Thanks, NYT!
+$visited-link-color: #7b3291;
 $index-border-color: gray;
