--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,11 @@ body {
     font-family: 'AdobeGaramond', serif;
     font-size: 1.8rem;
     line-height: 1.5;
+
+    p {
+        font-size: 1.9rem;
+        line-height: 1.6;
+    }
 }
 
 .code-title {
@@ -47,6 +52,10 @@ a {
 
     &:hover {
         text-decoration: underline;
+    }
+
+    &:visited {
+        color: $visited-link-color;
     }
 }
 
@@ -86,6 +95,10 @@ h1 a {
 
     &:hover {
         text-decoration: underline;
+    }
+
+    &:visited {
+        color: inherit;
     }
 }
 
