Fix footnote sizing.

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,11 +13,11 @@ body {
     font-family: 'AdobeGaramond', serif;
     font-size: 1.8rem;
     line-height: 1.5;
+}
 
-    p {
-        font-size: 1.9rem;
-        line-height: 1.6;
-    }
+article {
+    font-size: 1.9rem;
+    line-height: 1.6;
 }
 
 .code-title {
