--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -89,7 +89,7 @@ header ul, .mobile-header ul, ul.index {
 
 article img {
     max-width: 100%;
-    margin: auto;
+    margin: 36px auto;
     display: block;
 }
 
