--- a/css/main.scss
+++ b/css/main.scss
@@ -46,6 +46,10 @@ pre {
 h1 {
     font-size: 4.2rem;
     line-height: 1.2;
+
+    @media (max-width: $main-with-header-extent) {
+        font-size: 3.6rem;
+    }
 }
 
 a {
