Font and background color tweaks for less contrast.

--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,8 @@ body {
     font-family: 'AdobeGaramond', serif;
     font-size: 1.8rem;
     line-height: 1.5;
+    color: $font-color;
+    background-color: $background-color;
 }
 
 article {
