--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -1,3 +1,5 @@
+$font-color: #333;
+$background-color: #fffdfa;
 $pre-background-color: #fdfdfd;
 $pre-border-color: lightgray;
 $link-color: #326891; // Thanks, NYT!
