Better dropdown toggle script that doesn't require jquery.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -134,7 +134,7 @@ footer {
         line-height: 0.8;
     }
 
-    .arrow-down, .arrow-up {
+    .dropdown-arrow {
         float: right;
         margin-top: 0.5em;
     }
