--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,13 +45,13 @@
   </head>
   <body>
     <!-- content -->
-    <div class="mobile-header">
+    <div class="mobile-header closed">
       <div class="dropdown-toggle">
-        <div class="arrow-down dropdown-toggle">
+        <div class="dropdown-arrow">
         </div>
         <h1 class="code-title">0b10</h1>
       </div>
-      <div class="dropdown closed">
+      <div class="dropdown">
         <p>Two-Bit History</p>
         <nav>
           <ul>
