--- a/_sass/_colors.scss
+++ b/_sass/_colors.scss
@@ -4,3 +4,4 @@ $pre-border-color: lightgray;
 $link-color: #326891; // Thanks, NYT!
 $visited-link-color: #7b3291;
 $index-border-color: gray;
+$table-banding-color: #ebeff5;
