Add table container.

--- a/_sass/_table.scss
+++ b/_sass/_table.scss
@@ -1,5 +1,10 @@
 @import 'colors';
 
+.table-container {
+    width: 100%;
+    overflow-x: scroll;
+}
+
 table {
     border-collapse: collapse;
 }
