--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,7 @@ layout: default
 ---
 <div class="post-header">
   <h1>{{ page.title }}</h1>
+  {% include tags.html tags=page.tags %}
   <p class="meta"><em>{{ page.date | date_to_string }}</em></p>
 </div>
 <article>
