Reorganize style sheets and adjust post header spacing.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -69,9 +69,11 @@
     </div>
     <main>
       <header>
-        <h1 class="code-title"><a href="{{site.url}}{% link index.html %}">
+        <h1 class="code-title">
+          <a class="title-link" href="{{site.url}}{% link index.html %}">
             0b10
-        </a></h1>
+          </a>
+        </h1>
         <p>Two-Bit History</p>
         <p class="tagline">
           Computing through<br/>the ages
