Tags link to tag pages.

--- a/_includes/tags.html
+++ b/_includes/tags.html
@@ -1,7 +1,9 @@
 <ul class="tags">
   {% for tag in include.tags %}
-  <li class="{{ tag | downcase }}">
-      {{ tag }}
+    <li class="{{ tag | downcase }}">
+      <a href="{{ site.baseurl }}/tags/{{ tag | downcase }}">
+        {{ tag }}
+      </a>
     </li>
   {% endfor %}
 </ul>
