--- a/_sass/_tags.scss
+++ b/_sass/_tags.scss
@@ -8,8 +8,14 @@ ul.tags {
 
     li {
         display: inline-block;
-        padding: 0 0.4em;
         border-radius: 5px;
+    }
+
+    a {
+        display: inline-block;
+        padding: 0 0.4em;
+        text-decoration: none;
+        color: inherit;
     }
 
     li.hardware {
